<resources>
    <string name="hint_loupe_channel_name">Напишите название телеканала</string>
    <string name="app_name">TvLimex</string>
    <string name="tab_all">Все</string>
    <string name="tab_favorite">Избранное</string>
    <string name="channelname">ChannelName</string>
    <string name="program">Program</string>
    <string name="hint_text_time_player">Осталось 12 минут</string>
    <string name="auto">AUTO</string>
    <string name="nhd">360p</string>
    <string name="vga">480p</string>
    <string name="hd">720p</string>
    <string name="full_hd">1080p</string>

    <string-array name="tab_titles">
        <item>@string/tab_all</item>
        <item>@string/tab_favorite</item>
    </string-array>
</resources>